<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_my_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.keegz_000.opsc7311_assign1_15003770.MyGame"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:text="@string/title_Memory"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/tvMatch" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:id="@+id/button_4x4_game"
        android:text="@string/menu_4x4_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button"
        android:background="@drawable/btnshape"
        android:layout_alignBaseline="@+id/button_5x6_game"
        android:layout_alignBottom="@+id/button_5x6_game"
        android:layout_alignParentStart="true"
        android:layout_marginStart="32dp" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/button_6x6_game"
        android:layout_width="125dp"
        android:text="@string/menu_6x6_button"
        android:background="@drawable/btnshape"
        android:layout_alignBaseline="@+id/button_8x5_game"
        android:layout_alignBottom="@+id/button_8x5_game"
        android:layout_alignStart="@+id/button_4x4_game" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/button_8x5_game"
        android:layout_width="125dp"
        android:background="@drawable/btnshape"
        android:text="@string/menu_8x5_button"
        android:layout_marginBottom="107dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/button_5x6_game" />

    <Button
        android:layout_height="wrap_content"
        android:id="@+id/button_5x6_game"
        android:text="@string/menu_5x6_game"
        android:layout_width="125dp"
        android:background="@drawable/btnshape"
        android:layout_marginEnd="30dp"
        android:layout_above="@+id/button_8x5_game"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="94dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvHelp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/help" />

</RelativeLayout>
